<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anna.zad4.Fragment22">

    <TextView
        android:id="@+id/f22_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:labelFor="@+id/f22_name"
        android:text="@string/f22_name_label" />

    <EditText
        android:id="@+id/f22_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:id="@+id/f22_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:labelFor="@+id/f22_price"
        android:text="@string/f22_price_label" />

    <EditText
        android:id="@+id/f22_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/f22_sport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:labelFor="@+id/f22_sport"
        android:text="@string/f22_sport_label" />

    <Switch
        android:id="@+id/f22_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/f22_sport_label" />

    <Button
        android:id="@+id/f22_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/f21_save" />
</GridLayout>
